k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site-service
spec:
  selector:
    app: static-site
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
